// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rux-button renders 1`] = `
<rux-button>
  <mock:shadow-root>
    <button class="rux-button rux-button--default" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
  Button
</rux-button>
`;

exports[`rux-button sets attributes 1`] = `
<rux-button disabled="" secondary="" type="submit">
  <mock:shadow-root>
    <button aria-disabled="true" class="rux-button rux-button--secondary" disabled="" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
  Button
</rux-button>
`;
